hsmc-macros/tests/ui/t9_3_terminate_in_child.stderr
error: `terminate` is only valid at the root level
  --> tests/ui/t9_3_terminate_in_child.rs:14:9
   |
14 |         terminate(Halt);
   |         ^^^^^^^^^

error[E0405]: cannot find trait `MActions` in this scope
  --> tests/ui/t9_3_terminate_in_child.rs:20:6
   |
20 | impl MActions for MActionContext<'_> {
   |      ^^^^^^^^ not found in this scope

error[E0425]: cannot find type `MActionContext` in this scope
  --> tests/ui/t9_3_terminate_in_child.rs:20:19
   |
20 | impl MActions for MActionContext<'_> {
   |                   ^^^^^^^^^^^^^^ not found in this scope
